--- a/ODExplorer/Themes/ControlStyles.xaml
+++ b/ODExplorer/Themes/ControlStyles.xaml
@@ -32,6 +32,11 @@
                 <Setter Property="Background"
                         Value="{DynamicResource Non-Scoopable Star}" />
             </DataTrigger>
+            <DataTrigger Binding="{Binding StarClass}"
+                         Value="N">
+                <Setter Property="Background"
+                        Value="{DynamicResource Neutron Star}" />
+            </DataTrigger>
         </Style.Triggers>
     </Style>
 
@@ -786,4 +791,26 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="Seperator Style"
+           TargetType="{x:Type Separator}">
+        <Setter Property="Background"
+                Value="{DynamicResource MainWindowBackground}" />
+        <Setter Property="Margin"
+                Value="0,2,0,2" />
+        <Setter Property="Focusable"
+                Value="false" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Separator}">
+                    <Border BorderBrush="{DynamicResource MainWindowBackground}"
+                            BorderThickness="0"
+                            Background="{DynamicResource Groupbox Border}"
+                            Height="1"
+                            SnapsToDevicePixels="true" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
